# SDPP

./: .gitignore  OVERVIEW.md  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  docker-entrypoint.sh  pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 20260623_1821_f0adfc356446_initial_schema.py  20260623_1830_audit0001_audit_append_only.py  20260626_1037_4e2e105eaaa3_smp_modules.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  deps.py  errors.py  middleware.py
backend/app/api/routers/: __init__.py  access.py  admin.py  analytics.py  assets.py  audit.py  auth.py  billing.py  cameras.py  comms.py  compliance.py  cyber.py  dashboard.py  detections.py  discovery.py  emergency.py  evidence.py  files.py  guards.py  health.py  keys.py  (+9 more)
backend/app/core/: __init__.py  bootstrap.py  config.py  enums.py  logging.py
backend/app/db/: __init__.py  base.py  session.py  types.py
backend/app/models/: __init__.py  access.py  alert.py  alert_delivery.py  asset.py  audit.py  automation.py  billing.py  camera.py  comms.py  compliance.py  cyber.py  detection.py  emergency.py  enums.py  evidence.py  file.py  guard.py  incident.py  key.py  organization.py  scan.py  site.py  sysadmin.py  user.py  vehicle.py  visitor.py  vuln.py
backend/app/schemas/: __init__.py  auth.py  collab.py  common.py  cyber.py  detection.py  files.py  physical.py  saas.py  secops.py  security.py  smp.py  tenancy.py
backend/app/services/: __init__.py  admin_service.py  alert_engine.py  analytics_service.py  asset_service.py  audit_service.py  auth_service.py  billing_service.py  comms_service.py  compliance_service.py  crud.py  cyber_service.py  detection_service.py  discovery_service.py  emergency_service.py  evidence_service.py  exceptions.py  incident_service.py  key_service.py  monitoring_service.py  notification_service.py  org_service.py  physical_service.py  storage.py  user_service.py  vault_service.py  vuln_service.py  workflow_service.py
backend/scripts/: benchmark.py  seed_demo_users.py
backend/tests/: conftest.py
backend/tests/integration/: api_helpers.py  conftest.py  test_alert_engine.py  test_analytics_collab_api.py  test_api.py  test_asset_service.py  test_audit_service.py  test_auth_service.py  test_compliance_monitoring.py  test_cyber_api.py  test_detection_api.py  test_discovery_service.py  test_incident_service.py  test_models.py  test_physical_api.py  test_saas_api.py  test_secops_api.py  test_security_attacks.py  test_smp_api.py  test_smp_dashboard_users.py  test_vault_service.py  test_vuln_service.py
backend/tests/load/: locustfile.py
backend/tests/performance/: test_crypto_perf.py
backend/tests/unit/: test_authz.py  test_compliance_controls.py  test_crypto.py  test_field_encryption.py  test_hashing.py  test_kms_envelope.py  test_passwords.py  test_targets.py  test_tokens.py  test_vuln_matching.py
(+84 files in other folders)
